[package]
name = "personworld"
version = "0.1.0"
authors = ["Rasmus Ansin <rasmus.ansin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0"
actix-rt = "1.0"
actix-http = "1.0.1"
futures = "0.3.1"
env_logger = "0.7.1"
failure = "0.1.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = "0.21.0"
